--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --aot -o --port 2000 --poll=2000",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -16,10 +16,15 @@
     "@angular/compiler": "~9.1.11",
     "@angular/core": "~9.1.11",
     "@angular/forms": "~9.1.11",
+    "@angular/localize": "~9.1.11",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "bootstrap": "^4.4.0",
+    "ng-starrating": "^1.0.20",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.15.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
